<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c1"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/hr_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/logo"
         />

    <TextView
        android:id="@+id/title1_text"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/name_app"
        android:textColor="@color/c2"
        android:textSize="40sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/diplomata_sc"
        android:gravity="center"
        android:text="@string/name1_app"
        android:textColor="@color/c2"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:fontFamily="@font/risque"
        android:gravity="center"
        android:text="@string/guideline"
        android:textColor="@color/c3"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="10dp" />


</LinearLayout>