<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/header_layout_bg"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/title1_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/name_app"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/name1_app"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guideline"
            android:layout_marginLeft="95dp"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/black"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="6dp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="110dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:background="@color/c3">

        <TextView
            android:id="@+id/btn_requestbook"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/c1"
            android:text="@string/btn_ruqestbook"
            android:textAlignment="center"
            android:textColor="#37474F"
            android:textSize="12sp"
            android:textStyle="italic">

        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="220dp"
            android:background="@color/c1"
            android:text="@string/btn_logout"
            android:textAlignment="center"
            android:textColor="#37474F"
            android:textSize="12sp"
            android:textStyle="italic"
            tools:ignore="TouchTargetSizeCheck">

        </androidx.appcompat.widget.AppCompatButton>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/shortnote_bg"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:text="SHORT NOTES"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="227dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/importance_shortsnote"
                        android:textColor="@color/c3"
                        android:textSize="14dp"
                        android:textStyle="bold"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="10dp"
                    android:padding="8dp"
                    android:src="@drawable/p02" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/tute_bg"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:text="TUTES"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/importance_tute"
                        android:textColor="@color/c1"
                        android:textSize="14dp"
                        android:textStyle="bold"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="118dp"
                    android:padding="8dp"
                    android:src="@drawable/p04" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/shortnote_bg"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:text="RESOURCES"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="227dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/importance_recource"
                        android:textColor="@color/c3"
                        android:textSize="14dp"
                        android:textStyle="bold"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="10dp"
                    android:padding="8dp"
                    android:src="@drawable/p01" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/tute_bg"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:text="PAST PAPERS"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="227dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/importance_pastpaper"
                        android:textColor="@color/c1"
                        android:textSize="14dp"
                        android:textStyle="bold"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="10dp"
                    android:padding="8dp"
                    android:src="@drawable/p03" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>



    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="10dp"
        app:fabCradleVerticalOffset="10dp"
        tools:ignore="BottomAppBar">


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/transparent_background"
            app:menu="@menu/bottom_nav_menu">

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="173dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/add"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_anchor="@+id/bottomAppBar"
        app:layout_anchorGravity="bottom|center" />


</RelativeLayout>